@@ -1,3 +1,8 @@
+2008-08-17  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/mips/mips.c (mips_save_reg_p): Don't short-circuit rest
+	of function when handling GLOBAL_POINTER_REGNUM.
+
 2008-08-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR ada/20548
